# storygraph-bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/storygraph_bot/: __init__.py  bot.py  flare_client.py  newness_cache.py  news_parser.py  settings.py  storygraph_client.py  util.py
src/storygraph_bot/discord/: client.py  commands.py
