[project]
name = "storygraph-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Devyn Keeney", email = "me@devyntk.me" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "discord-py>=2.6.4",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
]

[project.scripts]
bot = "storygraph_bot:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
