[project]
name = "storygraph-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Devyn Keeney", email = "me@devyntk.me" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.2.2",
    "json-tricks>=3.17.3",
    "lxml>=6.0.2",
    "py-cord>=2.7.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
]

[project.scripts]
bot = "storygraph_bot:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
